# ABackeusAIProjDE24

./: README.md  api.py  function_app.py  ingestion.py  pyproject.toml
backend/: data_models.py  rag.py
frontend/: app.py
