[project]
name = "aiproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-functions>=1.24.0",
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "lancedb>=0.33.0",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.106.0",
    "pylance>=7.0.0",
    "pypdf>=6.13.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
